[project]
name = "lchinglen-time-mcp-server"
version = "1.0.3"
description = "A fun Time MCP Server for testing PyPI publishing with Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "L Chinglen", email = "test@example.com" },
]
keywords = ["time", "timezone", "mcp", "llm", "test"]
license = { text = "MIT" }
homepage = "https://github.com/lchinglen/time-mcp-server"
repository = "https://github.com/lchinglen/time-mcp-server.git"
issues = "https://github.com/lchinglen/time-mcp-server/issues"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.23.0",
    "pydantic>=2.0.0",
    "tzdata>=2024.2",
    "tzlocal>=5.3.1",
]

[project.scripts]
mcp-server-time = "mcp_server_time:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_time"]

[tool.uv]
dev-dependencies = [
    "freezegun>=1.5.1",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]
